<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="7dp"
        android:text="@string/hello_pollfish"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/show_btn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_main"
        android:text="@string/show"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/hide_btn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_main"
        android:text="@string/hide"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/activity_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_main"
            android:padding="9dp"
            android:text="@string/activity2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/incent_act_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_main"
            android:padding="9dp"
            android:text="@string/activity3"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>