<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/coins_act_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/activity_incent"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/coins_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_main"
            android:padding="10dp"
            android:text="@string/win_coins"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/logText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/logging"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_back_btn"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_main"
        android:text="@string/activity_back"
        android:textColor="@android:color/white" />

</RelativeLayout>